--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
         />
 
     <Button
+        android:id="@+id/btn_login"
         android:layout_width="110dp"
         android:layout_height="50dp"
         android:layout_marginLeft="50dp"
