--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:textSize="20dp" />
 
     <EditText
+        android:id="@+id/et_user"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:hint="User Name:"
@@ -23,6 +24,7 @@
         android:padding="50dp" />
 
     <EditText
+        android:id="@+id/et_password"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="75dp"
