--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".LoginActivity"
     android:orientation="horizontal">
 
     <TextView
@@ -45,6 +45,7 @@
 
 
     <Button
+        android:id="@+id/btn_register"
         android:layout_width="110dp"
         android:layout_height="50dp"
         android:layout_marginTop="500dp"
