--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity"
+    tools:context=".view.LoginActivity"
     android:orientation="horizontal">
 
     <TextView
@@ -32,7 +32,6 @@
         android:inputType="textPassword"
         android:maxLines="1"
         android:padding="50dp"
-
         />
 
     <Button
@@ -48,8 +47,8 @@
         android:id="@+id/btn_register"
         android:layout_width="110dp"
         android:layout_height="50dp"
-        android:layout_marginTop="500dp"
         android:layout_marginLeft="250dp"
+        android:layout_marginTop="500dp"
         android:text="Register" />
 
 </RelativeLayout>
