--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,54 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.LoginActivity"
-    android:orientation="horizontal">
+    android:orientation="vertical"
+    tools:context=".view.LoginActivity">
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/greeting"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
-        android:gravity="center"
-        android:text="WeTok Login"
-        android:textSize="20dp" />
+        android:layout_marginTop="80dp"
+        android:text="@string/greeting"
+        android:textSize="20sp"
+        android:layout_gravity="center" />
+
 
     <EditText
-        android:id="@+id/et_user"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:hint="User Name:"
-        android:maxLines="1"
-        android:padding="50dp" />
+        android:id="@+id/et_emailLogin"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
+        android:ems="10"
+        android:hint="@string/etEmail"
+        android:inputType="textEmailAddress"
+        android:minHeight="48dp"
+        android:textSize="14sp"
+        android:layout_gravity="center" />
 
     <EditText
-        android:id="@+id/et_password"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="75dp"
-        android:hint="Password:"
+        android:id="@+id/et_passwordLogin"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:hint="@string/etPassword"
         android:inputType="textPassword"
         android:maxLines="1"
-        android:padding="50dp"
-        />
+        android:minHeight="48dp"
+        android:textSize="14sp"
+        android:layout_gravity="center" />
 
     <Button
         android:id="@+id/btn_login"
-        android:layout_width="110dp"
+        android:layout_width="270dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="500dp"
-        android:text="Login" />
-
+        android:layout_gravity="center"
+        android:layout_marginTop="60dp"
+        android:text="@string/btnLogin" />
 
     <Button
         android:id="@+id/btn_register"
-        android:layout_width="110dp"
+        android:layout_width="270dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="250dp"
-        android:layout_marginTop="500dp"
-        android:text="Register" />
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:text="@string/btnRegister" />
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/btn_guestLogin"
+        android:layout_width="270dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:text="@string/btnGuestMode" />
+
+</LinearLayout>
