--- a/app/src/main/res/layout/activity_mainpage.xml
+++ b/app/src/main/res/layout/activity_mainpage.xml
@@ -12,6 +12,22 @@
         android:layout_marginTop="200dp"
         android:gravity="center"
         android:text="WeTok Mainpage after Login"
-        android:textSize="20dp" />
+        android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/btn_logOut"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="60dp"
+        android:text="@string/btnLogout" />
+
+    <Button
+        android:id="@+id/btn_deleteAccount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:text="Delete Account" />
 
 </LinearLayout>
