--- a/app/src/main/res/layout/activity_register_next.xml
+++ b/app/src/main/res/layout/activity_register_next.xml
@@ -100,16 +100,58 @@
                 android:text="@string/phoneNumber"
                 android:textSize="16sp" />
 
+            <com.hbb20.CountryCodePicker
+                android:id="@+id/ccp"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                app:ccp_countryPreference="AU,CN,IN,KR"
+                app:ccp_defaultNameCode="AU"
+                app:ccp_textSize="16sp"
+                />
+
+            <EditText
+                android:id="@+id/et_phoneNumber"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:inputType="phone"
+                android:minHeight="48dp"
+                android:singleLine="true"
+                android:textSize="16sp"
+                tools:ignore="SpeakableTextPresentCheck" />
+
+            <TextView
+                android:id="@+id/location"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:text="@string/location"
+                android:textSize="16sp" />
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="300dp"
+                android:layout_height="150dp"
+                android:layout_gravity="center">
+
+                <fragment
+                    android:id="@+id/autocomplete_fragment"
+                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </androidx.cardview.widget.CardView>
+
+            <Button
+                android:id="@+id/btn_loginAftReg"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="40dp"
+                android:text="@string/btnLoginAftReg" />
 
         </LinearLayout>
     </ScrollView>
-
-    <Button
-        android:id="@+id/btn_loginAftReg"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="40dp"
-        android:text="@string/btnLoginAftReg" />
 
 </LinearLayout>
