--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,62 +7,73 @@
     android:orientation="vertical"
     tools:context=".view.LoginActivity">
 
-    <TextView
-        android:id="@+id/greeting"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:text="@string/greeting"
-        android:textSize="20sp"
-        android:layout_gravity="center" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-    <EditText
-        android:id="@+id/et_emailLogin"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
-        android:ems="10"
-        android:hint="@string/etEmail"
-        android:inputType="textEmailAddress"
-        android:minHeight="48dp"
-        android:textSize="14sp"
-        android:layout_gravity="center" />
+            <TextView
+                android:id="@+id/greeting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="80dp"
+                android:text="@string/greeting"
+                android:textSize="20sp" />
 
-    <EditText
-        android:id="@+id/et_passwordLogin"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:hint="@string/etPassword"
-        android:inputType="textPassword"
-        android:maxLines="1"
-        android:minHeight="48dp"
-        android:textSize="14sp"
-        android:layout_gravity="center" />
+            <EditText
+                android:id="@+id/et_emailLogin"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="70dp"
+                android:ems="10"
+                android:hint="@string/etEmail"
+                android:inputType="textEmailAddress"
+                android:minHeight="48dp"
+                android:textSize="14sp" />
 
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_width="270dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="60dp"
-        android:text="@string/btnLogin" />
+            <EditText
+                android:id="@+id/et_passwordLogin"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:hint="@string/etPassword"
+                android:inputType="textPassword"
+                android:maxLines="1"
+                android:minHeight="48dp"
+                android:textSize="14sp" />
 
-    <Button
-        android:id="@+id/btn_register"
-        android:layout_width="270dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:text="@string/btnRegister" />
+            <Button
+                android:id="@+id/btn_login"
+                android:layout_width="270dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="60dp"
+                android:text="@string/btnLogin" />
 
-    <Button
-        android:id="@+id/btn_guestLogin"
-        android:layout_width="270dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:text="@string/btnGuestMode" />
+            <Button
+                android:id="@+id/btn_register"
+                android:layout_width="270dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:text="@string/btnRegister" />
+
+            <Button
+                android:id="@+id/btn_guestLogin"
+                android:layout_width="270dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:text="@string/btnGuestMode" />
+        </LinearLayout>
+    </ScrollView>
+
 
 </LinearLayout>
