--- a/app/src/main/res/layout/activity_register_next.xml
+++ b/app/src/main/res/layout/activity_register_next.xml
@@ -132,7 +132,7 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="300dp"
-                android:layout_height="150dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="center">
 
                 <fragment
