--- a/app/src/main/res/layout/activity_register_next.xml
+++ b/app/src/main/res/layout/activity_register_next.xml
@@ -15,12 +15,22 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="40dp"
             android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/registerNextProm"
+                android:textAlignment="textStart"
+                android:textAllCaps="false"
+                android:typeface="normal" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
                 <TextView
