--- a/app/src/main/res/layout/user_list_view.xml
+++ b/app/src/main/res/layout/user_list_view.xml
@@ -5,16 +5,33 @@
     android:orientation="horizontal">
 
     <ImageView
-        android:id="@+id/fruit_image"
-        android:layout_width="100dp"
-        android:layout_height="100dp" />
+        android:id="@+id/userlist_photo"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:src="@drawable/photo" />
 
-    <TextView
-        android:id="@+id/fruit_name"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="10dp"
-        android:textColor="#ff00ff"
-        android:textSize="36sp" />
+        android:layout_weight="0.1"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/userlist_username"
+            android:layout_width="match_parent"
+            android:layout_height="38dp"
+            android:layout_weight="0.5"
+            android:gravity="center_vertical"
+            android:text="JJJ"
+            android:textColor="#0000CC"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/userlist_userid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="123456"
+            android:textColor="#777777"
+            android:textSize="16sp" />
+    </LinearLayout>
 </LinearLayout>
