--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:padding="20pt"
-    tools:context=".view.my.MyFragment">
-
+    tools:context=".view.ProfileActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,12 +46,6 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/profile_logout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Logout" />
-
-    <Button
         android:id="@+id/profile_subscriber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -73,5 +65,6 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_weight="0.8" />
+
 
 </LinearLayout>
