--- a/app/src/main/res/layout/post_list_view.xml
+++ b/app/src/main/res/layout/post_list_view.xml
@@ -62,11 +62,13 @@
         android:text="ab\ncd"
         android:textSize="16sp" />
 
-    <com.example.wetok.view.home.FlowLayout
+    <com.example.wetok.view.home.MyLinearLayout
         android:id="@+id/list_post_tags"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:layout_weight="0.1" />
 
     <TextView
