--- a/app/src/main/res/layout/activity_register_next.xml
+++ b/app/src/main/res/layout/activity_register_next.xml
@@ -205,8 +205,12 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="40dp"
-                android:layout_marginBottom="40dp"
                 android:text="@string/btnLoginAftReg" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:orientation="horizontal"></LinearLayout>
 
         </LinearLayout>
     </ScrollView>
