--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,9 +7,9 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_add"
+        android:id="@+id/navigation_friend"
         android:icon="@drawable/ic_friends"
-        android:title="@string/title_add" />
+        android:title="@string/title_friend" />
 
     <item
         android:id="@+id/navigation_my"
