--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,12 @@
         android:name="com.example.wetok.view.my.MyFragment"
         android:label="@string/title_my"
         tools:layout="@layout/fragment_my" />
+
+    <fragment
+        android:id="@+id/navigation_friend"
+        android:name="com.example.wetok.view.home.FriendFragment"
+        android:label="@string/title_friend"
+        tools:layout="@layout/fragment_friend"/>
+
+
 </navigation>
