--- a/app/src/main/res/layout/post_list_view.xml
+++ b/app/src/main/res/layout/post_list_view.xml
@@ -40,7 +40,7 @@
             android:layout_width="80dp"
             android:layout_marginRight="10dp"
             android:layout_height="match_parent"
-            android:background="@drawable/round_corner5"
+            android:background="#00000000"
             android:drawablePadding="10dp"
             android:paddingTop="5dp"
             android:textSize="16sp"
@@ -67,19 +67,40 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
         android:layout_weight="0.1" />
 
-    <TextView
-        android:id="@+id/list_post_like"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
+    <LinearLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="28dp"
+        android:layout_margin="8pt"
         android:layout_weight="0.1"
-        android:background="#00000000"
-        android:drawablePadding="10dp"
-        android:paddingTop="5dp"
-        android:textSize="16sp"
-        android:text="123" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/list_post_like"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_weight="0.1"
+            android:background="#00000000"
+            android:drawablePadding="10dp"
+            android:paddingTop="5dp"
+            android:textSize="16sp"
+            android:text="123" />
+
+        <TextView
+            android:id="@+id/list_post_time"
+            android:layout_width="76dp"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp"
+            android:background="#00000000"
+            android:drawablePadding="0dp"
+            android:gravity="right"
+            android:paddingTop="5dp"
+            android:text="23"
+            android:textSize="16sp" />
+</LinearLayout>
 
 </LinearLayout>
