--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -6,7 +6,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="20pt"
-    tools:context=".view.my.MyFragment">
+    tools:context=".view.fragment.MyFragment">
 
 
     <LinearLayout
