--- a/app/src/main/res/layout/post_list_view.xml
+++ b/app/src/main/res/layout/post_list_view.xml
@@ -62,7 +62,7 @@
         android:text="ab\ncd"
         android:textSize="16sp" />
 
-    <com.example.wetok.view.home.MyLinearLayout
+    <com.example.wetok.view.fragment.MyLinearLayout
         android:id="@+id/list_post_tags"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
