--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -21,7 +21,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="79dp"
             android:layout_weight="0.1"
             android:orientation="vertical">
 
@@ -30,8 +30,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="38dp"
                 android:layout_weight="0.5"
-                android:text="JJJ"
                 android:gravity="center_vertical"
+                android:text="JJJ"
                 android:textColor="#0000CC"
                 android:textSize="16sp" />
 
@@ -46,16 +46,10 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/profile_subscriber"
+        android:id="@+id/profile_subscribe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Subscriber" />
-
-    <Button
-        android:id="@+id/profile_follower"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Follower" />
+        android:text="Subscribe him/her now" />
 
     <ListView
         android:id="@+id/profile_post_list"
