--- a/app/src/main/res/layout/post_list_view.xml
+++ b/app/src/main/res/layout/post_list_view.xml
@@ -9,7 +9,7 @@
     <LinearLayout
 
         android:layout_width="match_parent"
-        android:layout_height="28dp"
+        android:layout_height="56dp"
         android:layout_margin="10pt"
         android:layout_weight="0.1"
 
@@ -17,13 +17,14 @@
 
         <ImageView
             android:id="@+id/list_post_user_image"
-            android:layout_width="51dp"
-            android:layout_height="40dp"
+            android:layout_width="90dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
             android:src="@drawable/photo" />
 
         <TextView
             android:id="@+id/list_post_user_name"
-            android:layout_width="wrap_content"
+            android:layout_width="202dp"
             android:layout_height="38dp"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="0dp"
@@ -31,20 +32,21 @@
             android:layout_weight="0.5"
             android:ellipsize="end"
             android:padding="5dp"
-            android:textSize="22sp"
             android:text="JJJ"
-            android:textColor="#0000CC" />
+            android:textColor="#0000CC"
+            android:textSize="22sp" />
 
         <TextView
             android:id="@+id/list_post_btn_sub"
-            android:layout_width="80dp"
+            android:layout_width="69dp"
+            android:layout_height="37dp"
             android:layout_marginRight="10dp"
-            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
             android:background="#00000000"
             android:drawablePadding="10dp"
             android:paddingTop="5dp"
-            android:textSize="16sp"
-            android:text="23" />
+            android:text="23"
+            android:textSize="16sp" />
     </LinearLayout>
 
     <TextView
