--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,6 +7,11 @@
         android:title="@string/title_home" />
 
     <item
+        android:id="@+id/navigation_city"
+        android:icon="@drawable/ic_city"
+        android:title="@string/title_city" />
+
+    <item
         android:id="@+id/navigation_friend"
         android:icon="@drawable/ic_friends"
         android:title="@string/title_friend" />
