--- a/app/src/main/res/layout/post_list_view.xml
+++ b/app/src/main/res/layout/post_list_view.xml
@@ -94,7 +94,7 @@
 
         <TextView
             android:id="@+id/list_post_time"
-            android:layout_width="76dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginRight="10dp"
             android:background="#00000000"
