--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="color_FFa726">#FFFFA726</color>
     <color name="gray">#FFCCCCCC</color>
+    <color name="Tiffany_blue">#81D8D1</color>
 </resources>
