--- a/app/src/main/res/layout/post_list_view.xml
+++ b/app/src/main/res/layout/post_list_view.xml
@@ -33,7 +33,7 @@
             android:ellipsize="end"
             android:padding="5dp"
             android:text="JJJ"
-            android:textColor="#0000CC"
+            android:textColor="#81D8D1"
             android:textSize="22sp" />
 
         <TextView
