--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,70 +8,67 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#FFFFFF"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <ImageView
+            android:contentDescription="@string/logo"
+            android:layout_width="271dp"
+            android:layout_height="158dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/logo2" />
+
+        <EditText
+            android:autofillHints="Email"
+            android:id="@+id/et_emailLogin"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:ems="10"
+            android:hint="@string/etEmail"
+            android:inputType="textEmailAddress"
+            android:minHeight="48dp"
+            android:textSize="14sp" />
+        <EditText
+            android:autofillHints="Password"
+            android:id="@+id/et_passwordLogin"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:hint="@string/etPassword"
+            android:inputType="textPassword"
+            android:maxLines="1"
+            android:minHeight="48dp"
+            android:textSize="14sp" />
 
-            <TextView
-                android:id="@+id/greeting"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="80dp"
-                android:text="@string/greeting"
-                android:textSize="20sp" />
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="270dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:text="@string/btnLogin" />
 
-            <EditText
-                android:id="@+id/et_emailLogin"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="70dp"
-                android:ems="10"
-                android:hint="@string/etEmail"
-                android:inputType="textEmailAddress"
-                android:minHeight="48dp"
-                android:textSize="14sp" />
+        <Button
+            android:id="@+id/btn_register"
+            android:layout_width="270dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:text="@string/btnRegister" />
 
-            <EditText
-                android:id="@+id/et_passwordLogin"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:hint="@string/etPassword"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:minHeight="48dp"
-                android:textSize="14sp" />
-
-            <Button
-                android:id="@+id/btn_login"
-                android:layout_width="270dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="60dp"
-                android:text="@string/btnLogin" />
-
-            <Button
-                android:id="@+id/btn_register"
-                android:layout_width="270dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:text="@string/btnRegister" />
-
-            <Button
-                android:id="@+id/btn_guestLogin"
-                android:layout_width="270dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:text="@string/btnGuestMode" />
-        </LinearLayout>
+        <Button
+            android:id="@+id/btn_guestLogin"
+            android:layout_width="270dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:text="@string/btnGuestMode" />
     </ScrollView>
 
 
