--- a/app/src/main/res/layout/user_list_view.xml
+++ b/app/src/main/res/layout/user_list_view.xml
@@ -8,7 +8,7 @@
         android:id="@+id/userlist_photo"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:src="@drawable/photo" />
+        android:src="@drawable/avatar0" />
 
     <LinearLayout
         android:layout_width="match_parent"
